<resources>
    <string name="app_name">NotesForMe</string>
    <string name="notes_for_me">Notes For Me</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="miscellaneous">Options</string>
    <string name="pick_color">Pick Color:</string>
    <string name="add_image">Add Image</string>
    <string name="add">ADD</string>
    <string name="enter_url">Enter URL</string>
    <string name="add_url">Add URL</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_note_choice">DELETE NOTE</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="settings">Settings</string>
    <string name="change_theme">Change Theme</string>
    <string name="dark">Dark</string>
    <string name="change_language">Device Language</string>
    <string name="lang">EN</string>
    <string name="light">Light</string>
    <string name="locale_err">English locale not found.</string>
    <string name="app_information">App Information</string>
    <string name="app_version">App version</string>
</resources>