<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/textSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/settings"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageSave"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_done"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/textSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textSettings"/>


    <LinearLayout
        android:id="@+id/layoutThemeChange"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_search"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/textSettings">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/change_theme"
            android:gravity="center_vertical"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13ssp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <Button
                android:id="@+id/buttonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark"
                android:fontFamily="@font/ubuntu_bold"
                android:background="@drawable/background_button"
                android:textColor="@color/colorWhite"
                android:textAllCaps="true"
                />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textAppInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/app_information"
        android:gravity="center_vertical"
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="@id/layoutThemeChange"
        app:layout_constraintTop_toTopOf="@id/layoutLanguage"/>

    <LinearLayout
        android:id="@+id/layoutLanguage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_search"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/textAppInformation">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/change_language"
            android:gravity="center_vertical"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13ssp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <TextView
                android:id="@+id/textLanguage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/lang"
                android:layout_marginEnd="@dimen/_20sdp"
                android:gravity="center_vertical"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_13ssp"
                android:textAllCaps="true"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAppVersion"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_search"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/layoutLanguage">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/app_version"
            android:gravity="center_vertical"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13ssp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <TextView
                android:id="@+id/textVersion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="v0.3.5"
                android:layout_marginEnd="@dimen/_20sdp"
                android:gravity="center_vertical"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_13ssp"
                />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textCopyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/ubuntu_light"
        android:text="©2020 Jan Nejezchleba."
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@id/textCopyright"/>





</androidx.constraintlayout.widget.ConstraintLayout>